src/objects/CaseRecordType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Case Record Type based on Categories</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <label>RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teritiary_Category__c</fullName>
        <label>Tertiary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CaseRecordType</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>SLA__c</columns>
        <columns>Primary_Category__c</columns>
        <columns>Secondary_Category__c</columns>
        <columns>Teritiary_Category__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>RecordTypeId__c</columns>
        <columns>AutorabitExtId__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
</CustomObject>